--- a/app/src/main/res/layout/row_gift.xml
+++ b/app/src/main/res/layout/row_gift.xml
@@ -16,7 +16,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_weight="2.5"
+        android:layout_weight="2"
         android:layout_marginStart="10dp"
         android:orientation="vertical">
         <TextView
@@ -37,18 +37,38 @@
             android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_marginTop="10dp"/>
+
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/select_text"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Select"
-        android:layout_weight="1"
-        android:textSize="20sp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/darkGreen" />
+        android:layout_weight="1.5"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/select_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/purchase"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/darkGreen" />
+        <TextView
+            android:id="@+id/open_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/open"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:textColor="@color/darkGreen" />
+    </LinearLayout>
+
 
 </LinearLayout>
