--- a/app/src/main/res/layout/row_gift.xml
+++ b/app/src/main/res/layout/row_gift.xml
@@ -16,7 +16,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_weight="2.5"
+        android:layout_weight="2"
         android:layout_marginStart="10dp"
         android:orientation="vertical">
         <TextView
@@ -36,18 +36,34 @@
             android:drawablePadding="10dp"
             android:textSize="18sp"
             android:textColor="@color/black"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="5dp"/>
     </LinearLayout>
 
     <TextView
-        android:id="@+id/select_text"
+        android:id="@+id/purchase_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Select"
-        android:layout_weight="1"
+        android:text="Purchase"
+        android:layout_weight="1.5"
         android:textSize="20sp"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="8dp"
+        android:padding="5dp"
         android:layout_gravity="center"
-        android:gravity="center"
+        android:textStyle="bold"
+        android:textColor="@color/darkOrange" />
+
+    <TextView
+        android:id="@+id/open_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Open"
+        android:layout_weight="1.5"
+        android:textSize="20sp"
+        android:drawableStart="@drawable/ic_open"
+        android:drawablePadding="8dp"
+        android:padding="5dp"
+        android:layout_gravity="center"
         android:textStyle="bold"
         android:textColor="@color/darkGreen" />
 
