update spinwheel activity and history activity

--- a/app/src/main/res/layout/activity_lucky_number.xml
+++ b/app/src/main/res/layout/activity_lucky_number.xml
@@ -33,10 +33,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Chúc mừng"
-        android:textColor="@color/darkOrange"
+        android:textColor="@color/yellow"
         android:textSize="34sp"
         android:textStyle="bold"
         android:visibility="gone"
+        android:drawableStart="@drawable/coins"
+        android:drawablePadding="8dp"
         app:layout_constraintBottom_toTopOf="@+id/coins"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
