--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -18,4 +18,5 @@
     <color name="lightPurple">#9C6EED</color>
 
     <color name="leaderboardPurple">#C6ACF4</color>
+    <color name="yellow">#FFC107</color>
 </resources>
