--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,11 +125,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/login_btn"
-        android:drawableLeft="@drawable/ic_star"
+        android:drawableLeft="@drawable/ic_card_giftcard"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:paddingLeft="15dp"
-        android:text="Lucky Number"
+        android:text="Lucky Box"
         android:textColor="@color/color_white"
         app:drawableTint="@color/color_white"
         app:layout_constraintBottom_toBottomOf="@+id/spinwheel"
