--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -52,7 +52,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
-        android:text="30000"
+        android:text="Loading"
         android:textColor="@color/color_white"
         android:textSize="30sp"
         android:textStyle="bold"
