--- a/app/src/main/res/layout/activity_spin_wheel.xml
+++ b/app/src/main/res/layout/activity_spin_wheel.xml
@@ -11,11 +11,11 @@
         android:id="@+id/imageView5"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/spin_button"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageview30"
         app:srcCompat="@drawable/spin_stand" />
 
     <ImageView
@@ -35,9 +35,9 @@
         android:background="@drawable/login_btn"
         android:text="Spin"
         app:backgroundTint="@null"
-        app:layout_constraintBottom_toTopOf="@+id/imageView11"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
 
     <ImageView
@@ -64,19 +64,19 @@
         app:layout_constraintStart_toStartOf="@+id/spinwheel_image"
         app:srcCompat="@drawable/spinpin" />
 
+
     <View
         android:id="@+id/view12"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/round_box_orange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageview30" />
-
+        app:layout_constraintTop_toBottomOf="@+id/spin_button" />
 
     <TextView
         android:id="@+id/textView2"
