--- a/app/src/main/res/layout/activity_spin_wheel.xml
+++ b/app/src/main/res/layout/activity_spin_wheel.xml
@@ -78,22 +78,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spin_button" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/coins"
-        android:drawablePadding="5dp"
-        android:text="50 = 1 turn"
-        android:textColor="@color/color_white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/view12"
-        app:layout_constraintEnd_toEndOf="@+id/view12"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/view12"
-        app:layout_constraintTop_toTopOf="@+id/view12" />
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_spin_act"
         android:layout_width="0dp"
@@ -114,5 +98,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_spin_act"
         app:srcCompat="@drawable/spinitwinit" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="50 = 1 lượt"
+        android:textSize="20sp"
+        android:textColor="@color/color_white"
+        android:textStyle="bold"
+        android:drawableStart="@drawable/coins"
+        android:drawablePadding="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view12" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
